# 3dv

./: .gitignore  .prettierignore  LICENSE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  main.tsx  styles.scss  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/ui/: Button.tsx  Divider.tsx  IconButton.tsx  Panel.tsx  Tooltip.tsx  index.ts
src/viewer/: ModelViewer.tsx  fitCameraToObject.ts  modelMetadata.ts
