[package]
name = "three_dv"
version = "0.1.0"
description = "A lightweight 3D review and handoff viewer."
authors = ["3DV contributors"]
edition = "2021"

[lib]
name = "three_dv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
